// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QCollapseItem 快照测试 > 禁用状态渲染 1`] = `
"<div data-v-3242604d="" class="mouse-cursor-disable collapse-item">
  <div data-v-3242604d="" class="collapse-item__header bg-hover-secondary"><span data-v-3242604d="" class="collapse-item__title">禁用面板</span><i data-v-3242604d="" class="collapse-item__arrow"></i></div>
  <div data-v-3242604d="" class="collapse-item__content-wrapper">
    <div data-v-3242604d="" class="collapse-item__content">
      <p>内容</p>
    </div>
  </div>
</div>"
`;

exports[`QCollapseItem 快照测试 > 默认状态渲染 1`] = `
"<div data-v-3242604d="" class="collapse-item">
  <div data-v-3242604d="" class="collapse-item__header bg-hover-secondary"><span data-v-3242604d="" class="collapse-item__title">面板标题</span><i data-v-3242604d="" class="collapse-item__arrow"></i></div>
  <div data-v-3242604d="" class="collapse-item__content-wrapper">
    <div data-v-3242604d="" class="collapse-item__content">
      <p>折叠内容</p>
    </div>
  </div>
</div>"
`;
